maint: fixed margin/spacing issue in First Album on artist page

--- a/css/main.css
+++ b/css/main.css
@@ -162,6 +162,11 @@ p {
     font-size: 1.6rem;
     /*border: 0.1rem solid red;*/
     /*display: inline;*/
+
+    &#createSwitch {
+        margin-block-end: 0;
+        margin-block-start: 0;
+    }
 }
 
 .p--bold {
